Allows local request using relative URI.